Revert "network debug"
This reverts commit c96fa4f223349f5930705e871f4545fee6ec234b.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,13 @@ GameName=RunForrestRun
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GameDefaultMap=/Game/Maps/MainMenu.MainMenu
-TransitionMap=/Game/Maps/TravelMap.TravelMap
+TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Blueprints/Gameplay/GamePlayGm.GamePlayGm_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
-ServerDefaultMap=/Game/Maps/MainMenu.MainMenu
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
