--- a/RunForrestRun.uproject
+++ b/RunForrestRun.uproject
@@ -11,6 +11,10 @@
 		{
 			"Name": "AdvancedSteamSessions",
 			"Enabled": true
+		},
+		{
+			"Name": "FMODStudio",
+			"Enabled": true
 		}
 	]
 }
