--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/Blueprints/Gameplay/GamePlayGm.GamePlayGm_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Blueprints/AllLevels/GameInfoInstance.GameInfoInstance_C
 
